src/objects/Compliance_1_page_view__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Compliance_Cost__c</fullName>
        <label>Annual Compliance Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Description__c</fullName>
        <label>Compliance Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consequences_Of_Non_compliance__c</fullName>
        <label>Consequences Of Non-compliance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Of_Reg_Std_Policy_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Of Reg, Std, Policy Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_Of_Current_Compliance__c</fullName>
        <label>Degree Of Current Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almost complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial discussion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documentation_Submitted_To__c</fullName>
        <label>Documentation Submitted To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Owner__c</fullName>
        <label>Executive Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency_Of_Audit_Inspection__c</fullName>
        <label>Frequency Of Audit/Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Of_Filing__c</fullName>
        <label>Frequency Of Filing</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Audit_Inspection_Date__c</fullName>
        <label>Last Audit/Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Audit_Inspection_Report_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Audit/Inspection Report Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Filing_Date__c</fullName>
        <label>Next Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Rank__c</fullName>
        <label>Priority Rank</label>
        <picklist>
            <picklistValues>
                <fullName>Most important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less important</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimal important</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Policy_Agreement__c</fullName>
        <label>Related Policy/Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Regulation_Citation_Ref_No__c</fullName>
        <label>Related Regulation/Citation Ref No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Of_Compliance__c</fullName>
        <label>Source Of Compliance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Government Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Regulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Compliance_</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>